# src/main/kotlin/org/jaqpot/api/entity/DatasetStatus.kt
@@ -1,0 +1,8 @@
+package org.jaqpot.api.entity
+
+enum class DatasetStatus {
+    CREATED,
+    EXECUTING,
+    FAILURE,
+    SUCCESS
+}
