# src/main/kotlin/org/jaqpot/api/mapper/DatasetMapper.kt
@@ -2,6 +2,7 @@ package org.jaqpot.api.mapper
 
 import org.jaqpot.api.entity.DataEntryRole
 import org.jaqpot.api.entity.Dataset
+import org.jaqpot.api.entity.DatasetStatus
 import org.jaqpot.api.entity.Model
 import org.jaqpot.api.model.DatasetDto
 
@@ -12,6 +13,8 @@ fun Dataset.toDto(): DatasetDto {
         this.input.map { it.toDto() },
         this.id,
         this.results.map { it.toDto() },
+        this.status.toDto(),
+        this.failureReason,
         this.createdAt,
         this.updatedAt
     )
@@ -24,7 +27,9 @@ fun DatasetDto.toEntity(model: Model, userId: String): Dataset {
         userId,
         this.type.toEntity(),
         mutableListOf(),
-        mutableListOf()
+        DatasetStatus.CREATED,
+        mutableListOf(),
+        this.failureReason
     )
 
     d.input.addAll(this.input.map { it -> it.toEntity(d, DataEntryRole.INPUT) })
